inital commit of firmware role

--- a/firmware/tasks/bios.yml
+++ b/firmware/tasks/bios.yml
@@ -1,21 +1,5 @@
 ---
-# file : provisioning/roles/idrac-firmware/tasks/bios.yml
-
-- name: Life Cycle Log message for BIOS Upgrade Start
-  local_action: racadm username={{ lom_user }} password={{ lom_pass }}
-    host={{ lom_hostname }} cmd="lclog worknote add -m \"Starting BIOS upgrade\""
-
-#- name: Make sure iDrac is ready
-#  local_action: idrac username={{lom_user}} password={{lom_pass}}
-#    hostname={{lom_hostname}} command="GetRemoteServicesAPIStatus"
-#  register: result
-#  retries: 20
-#  delay: 20
-#  until: ((result.LCStatus == "0") and (result.Status == '0'))
-
-- name: Delete the Job Queue
-  local_action: idrac username={{lom_user}} password={{lom_pass}}
-    hostname={{ lom_hostname }} command="DeleteJobQueue"
+# file : roles/idrac/firmware/tasks/bios.yml
 
 - name: Upgrade BIOS
   local_action: idrac username={{ lom_user }} password={{ lom_pass }}
@@ -32,7 +16,7 @@
 #- include: rebootWithJob.yml
 #  when: result.jobid.find('JID') >= 0
 
-#- name: Wait for BIOS upgrade to complete
+#- name: Wait for BIOS install to complete
 #  local_action: idrac username={{lom_user}} password={{lom_pass}}
 #    hostname={{lom_hostname}} command="CheckJobStatus" jobid={{result.jobid}}
 #  register: result
