--- a/firmware/tasks/main.yml
+++ b/firmware/tasks/main.yml
@@ -1,19 +1,53 @@
 ---
 # file: roles/idrac/firmware/tasks/main.yml
 
+# Firmware upgrade order according to Dell
+# 1. iDRAC
+# 2. Lifecycle Controller
+# 3. BIOS
+# 4. Diagnostics
+# 5. OS Driver Pack
+# 6. RAID
+# 7. NIC
+# 8. PSU
+# 9. CPLD
+# 10. Other updates
+
 - name: Make sure iDrac is ready
   local_action: idrac username={{lom_user}} password={{lom_pass}}
                 hostname={{lom_hostname}} command="CheckReadyState"
   
-- debug: var=lom_hostname
+#- debug: var=Model
 
-# To resolve a Life Cycle Controller stuck in the following state 
-# http://www.dell.com/support/manuals/us/en/19/Topic/idrac8-with-lc-v2.05.05.05/LC_2.05.05.05_UG-v1/en-us/GUID-8F76747E-86F2-4242-BE3D-8BB5A88A7C0C
-# - fail: msg="The iDrac isn't ready... bailing out! - CHECK YOUR IDRAC - LifeCycleController Status {{ result.LCStatusString }}. Remote Service API Status {{ result.StatusString }} "
-#  when: ((result.LCStatus != "0") and (result.Status != '0'))
+#- debug: var=LifecycleControllerVersion
 
-- include: idrac.yml
-  when: LifecycleControllerVersion != target_LifecycleControllerVersion 
+#- debug: var=firmware[Model]['idrac']['target_version']
+
+# This one has to be run seperately because it causes an automatic reset of the 
+# iDRAC
+- include: idracFirmwareInstall.yml
+
+# This pulls the idrac firmware but, has all models
+#- debug: msg={{ item.key }}
+#  when: item.key == 'idrac'
+#  with_recursive:
+#   - { name: dict, args: firmware }
+#   - { name: dict, args: "{{item.value}}" }
+
+# Limit to just the idrac
+#- debug: var=item
+#  when: item.key == 'idrac'
+#  with_dict: firmware[Model]
+
+# Limit to a single model type
+#- debug: msg={{ item.value }}
+#  when: Model == item.key
+#  with_recursive:
+#    - { name: dict, args: firmware }
+
+# All firmware limited to a single model type
+#- debug: msg={{ item.key }}
+#  with_dict: firmware[Model]
 
 # removing for now - HB TODO
 #- include: perc.yml
@@ -22,8 +56,7 @@
 # TODO fixme
 #- include: firmware.yml
 
-# Disabled BIOs until idrac.yml is checking status properly
-- include: bios.yml
-  when: BIOSVersionString != target_BIOSVersionString
-
+# Disabled BIOS until idrac.yml is checking status properly
+#- include: bios.yml
+#  when: BIOSVersionString != target_BIOSVersionString
 
