Updated documentation - README.md - seperated the lines - alerts/tasks/main.yml - added 'name:' to setting syslog servers

--- a/alerts/tasks/main.yml
+++ b/alerts/tasks/main.yml
@@ -2,6 +2,7 @@
 # file: roles/idrac-alerts/tasks/main.yml
 
 - local_action: 
+    name: "Set the Syslog Servers"
     module: idrac
     username: "{{ lom_user }}"
     password: "{{ lom_pass }}"
