--- a/firmware/tasks/idracFirmwareInstall.yml
+++ b/firmware/tasks/idracFirmwareInstall.yml
@@ -2,8 +2,8 @@
 # file : roles/idrac/firmware/tasks/idracFirmwareInstall.yml
 
 # TODO add a log message
-- name: Life Cycle Log message for iDrac Firmware Upgrade Start
-  local_action: racadm username={{ lom_user }} password={{ lom_pass }} host={{ lom_hostname }} cmd="lclog worknote add -m \"Starting iDrac Firmware upgrade\""
+#- name: Life Cycle Log message for iDrac Firmware Upgrade Start
+#  local_action: racadm username={{ lom_user }} password={{ lom_pass }} host={{ lom_hostname }} cmd="lclog worknote add -m \"Starting iDrac Firmware upgrade\""
 
 #- debug: var=firmware[Model].idrac
 
