--- a/alerts/tasks/main.yml
+++ b/alerts/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 # file: roles/idrac-alerts/tasks/main.yml
 
-- local_action: 
-    name: "Set the Syslog Servers"
+- name: "Set the Syslog Servers"
+  local_action: 
     module: idrac
     username: "{{ lom_user }}"
     password: "{{ lom_pass }}"
