Added syslog port to alerts role

--- a/alerts/tasks/main.yml
+++ b/alerts/tasks/main.yml
@@ -9,6 +9,7 @@
     hostname: "{{ lom_hostname }}"
     command: 'SyslogSettings'
     servers: "{{ idrac_syslog_servers }}"
+    port: "{{ idrac_syslog_port }}"
   when: idrac_syslog_servers is defined
   tags:
     - idrac_syslog
