--- a/firmware/tasks/idracFirmwareInstall.yml
+++ b/firmware/tasks/idracFirmwareInstall.yml
@@ -3,7 +3,8 @@
 
 # TODO add a log message
 #- name: Life Cycle Log message for iDrac Firmware Upgrade Start
-#  local_action: racadm username={{ lom_user }} password={{ lom_pass }} host={{ lom_hostname }} cmd="lclog worknote add -m \"Starting iDrac Firmware upgrade\""
+#  local_action: idrac username={{ lom_user }} password={{ lom_pass }} host={{ lom_hostname }}
+#                name=LogMessage message="Starting iDRAC firmware install"
 
 #- debug: var=firmware[Model].idrac
 
@@ -14,9 +15,8 @@
     password: "{{lom_pass}}"
     hostname: "{{lom_hostname}}"
     command: "InstallIdracFirmware"
-    debug: "True"
     firmware:
-      "{{firmware[Model].idrac}}"
+      "{{firmware[SystemGeneration].idrac}}"
 
 - name: Check iDRAC status after upgrade
   local_action: idrac username={{lom_user}} password={{lom_pass}}
