upgradeFirmware * firmware/tasks/biosInstall.yml - changed command to name * firmware/tasks/firmwareInstall.yml - deleted * firmware/tasks/firmwareUpgrade.yml - new file * firmware/tasks/mail.yml - changed task to firmwareUpgrade

--- a/firmware/tasks/biosInstall.yml
+++ b/firmware/tasks/biosInstall.yml
@@ -7,6 +7,6 @@
     username: "{{ lom_user }}"
     password: "{{ lom_pass }}"
     hostname: "{{ lom_hostname }}"
-    command: "InstallBIOS"
+    name: "InstallBIOS"
     firmware:
       "{{firmware[SystemGeneration].bios}}"
