Working on installFirmware() for iDRAC-Ansible-module * updates to documentation * firmware.yml - deleted * firmware/defaults/firmware.yml - deleted * firmware/tasks/firmwareUpgrade.yml - added reboot_type to UpgradeFirmware task * firmware/tasks/idracFirmwareInstall.yml - changed index to SystemGeneration * firmware/tasks/main.yml - deleted now unneccesary documentation * host.example.com - deleted * local/tasks/main.yml - changed url to download. url is now passed to iDRAC. Downloading the firmware is really external to the iDRAC-Ansible-module.

--- a/firmware/tasks/firmwareUpgrade.yml
+++ b/firmware/tasks/firmwareUpgrade.yml
@@ -8,6 +8,7 @@
     password: "{{ lom_pass }}"
     hostname: "{{ lom_hostname }}"
     name: "UpgradeFirmware"
+    reboot_type: 1
     firmware: 
       "{{ firmware[SystemGeneration] }}"
   register: result
