uncommented some needed vars

--- a/local/defaults/main.yml
+++ b/local/defaults/main.yml
@@ -6,8 +6,8 @@
 #share_ip: 10.10.10.10
 #share_name: public
 #share_type: cifs
-#local_samba_path: /var/samba
-#local_firmware_path: "{{ local_samba_path }}/firmware"
+local_samba_path: /var/samba
+local_firmware_path: "{{ local_samba_path }}/firmware"
 
 # From the perspective of the iDRAC
 #remote_share_path: firmware
